sonar minor fixes